--- a/index.html
+++ b/index.html
@@ -131,7 +131,19 @@ List header
 
 <h2>Text Fields</h2>
 
-
+<form class="form">
+  Default Field <br>
+  <input type="text" name="default" placeholder="Default form value"><br>
+  Invalid Field <br>
+  <input type="text" name="invalid" class="invalid"><img src="images/alert.png" style="margin-left: 10px; margin-bottom:-3px">
+  <br>
+  <span style="font-family: Open Sans, Helvetica, Arial, sans-serif;font-size: 9pt;font-weight: 100; color: #BE3655;">Error messaging looks like this.</span><br>
+  <br><br>
+  Password Field <br>
+  <input type="text" name="Password" class="password" placeholder="&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;"><br>
+  Money Field <br>
+  <input type="text" name="firstname" class="money" value="USD"><br>
+</form>
 
 </div>
 
