cleaning up interactions

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ List header
 
 
 
-<a style="margin-top:50px" class="hvr-bounce-to-top" onclick="showdiv('research')">SHOW INTERACTIONS RESEARCH</a>
+<a style="margin-top:50px" class="hvr-bounce-to-top" onclick="showdiv('research')">INTERACTIONS RESEARCH</a>
 <div id="research" style="display:none">
 <h2>Buttons</h2>
 <section class="flex-container">
@@ -226,8 +226,6 @@ List header
         </div></a></div>
 
 </section>
-<hr>
-<h2>Dot Navigation</h2>
 </div>
 </div>
 <script>
