--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 </head>
 <body>
+<header></header>
+
+<main>
 <div class='page-wrap'>
 <div class='sym-wrap'>
 <h1>Symmetric</h1>
@@ -155,6 +158,7 @@ List header
 
 <h2>Text Fields</h2>
 
+
 <form class="form">
   Default Field <br>
   <input type="text" name="default" placeholder="Default form value"><br>
@@ -169,10 +173,109 @@ List header
   <input type="number" min="0.01" step="0.01" name="money" class="money"><br>
 </form>
 
+
+
+<hr>
+<h2>Buttons</h2>
+<!--Size 1-->
+<div style="width:130%">
+<div class="card-wrap">
+  <div class="card">
+    <h2 class="card-label">Size 1</h2>
+    <div>
+      <button>Primary</button>
+      <button class="btn-disabled">Primary</button>
+    </div>
+    <div>
+      <button class="btn-two">Secondary</button>
+      <button class="btn-disabled">Secondary</button>
+    </div>
+    <div class="dark-bg">
+      <button class="btn-dark">Dark</button>
+      <button class="btn-dark btn-dark-disabled">Dark</button>
+      <br>Dark background; color may vary
+    </div>
+  </div>
+  <!--Size 2-->
+  <div class="card">
+    <h2 class="card-label">Size 2</h2>
+    <div>
+      <button class="size-two">Primary</button>
+      <button class="btn-disabled size-two">Primary</button>
+    </div>
+    <div>
+      <button class="btn-two size-two">Secondary</button>
+      <button class="btn-disabled size-two">Secondary</button>
+    </div>
+    <div class="dark-bg">
+      <button class="btn-dark size-two">Dark</button>
+      <button class="btn-dark btn-dark-disabled size-two">Dark</button>
+      <br>Dark background; color may vary
+    </div>
+  </div> 
+  <!--Size 3-->
+  <div class="card">
+    <h2 class="card-label">Size 3</h2>
+    <div>
+      <button class="size-three">Primary</button>
+      <button class="btn-disabled size-three">Primary</button>
+    </div>
+    <div>
+      <button class="btn-two size-three">Secondary</button>
+      <button class="btn-disabled size-three">Secondary</button>
+    </div>
+    <div class="dark-bg">
+      <button class="btn-dark size-three">Dark</button>
+      <button class="btn-dark btn-dark-disabled size-three">Dark</button>
+      <br>Dark background; color may vary
+    </div>
+  </div>
+  <div class="card">
+    <h2 class="card-label">Tagged Items</h2>
+    <div>
+      <button class="tagged">Tagged Item Here</button>
+      <button class="tagged">Other Tagged Item</button>
+    </div>
+    <h2 class="card-label">Toggle</h2>
+    <div>
+      <input id="toggle-1" class="toggle toggle-round" type="checkbox">
+      <label for="toggle-1"></label>
+      <!-- DISABLED
+      <input id="cmn-toggle-2" class="cmn-toggle cmn-toggle-round-disabled" type="checkbox">
+      <label for="cmn-toggle-2"></label>
+      -->
+    </div>
+  </div>
+
+
+</div>
 </div>
 
 <hr>
+<h2>Checkboxes</h2>
+<table class="checkboxes" style="width:130%; margin: auto 0;">
+  <tr style="height:40px">
+    <td><h2 class="card-label">Active</h2></td>
+    <td><h2 class="card-label"></h2></td>
+    <td><h2 class="card-label"></h2></td>
+    <td></td>
+  </tr>
+  <tr style="height:40px">
+    <td><input type="checkbox" id="c1" />
+    <label for="c1"><span></span>Label</label></td>
+    <td><input checked type="checkbox" id="c2" />
+    <label for="c2"><span></span>Label</label></td>
+    <td><input type="radio" id="c3" name="radio-ex"/>
+    <label for="c3"><span></span>Label</label></td>
+    <td><input checked type="radio" id="c4" name="radio-ex"/>
+    <label for="c4"><span></span>Label</label></td>
+  </tr>
+</table>
 
+</div>
+<br><hr>
+
+<!--
 <h2>Dropdowns</h2>
 
 <select name="dropdown" class="password" style="text-indent:30px">
@@ -181,9 +284,10 @@ List header
   <option value="3">No me!</option>
   <option value="4">Pick me</option>
 </select>
-
-<br>
-<a style="margin-top:50px; margin-left: auto" class="hvr-bounce-to-top" onclick="showdiv('research')">INTERACTIONS RESEARCH</a>
+-->
+<div style="text-align:center">
+<a style="margin-left: auto" id="white" class="hvr-radial-out" onclick="showdiv('research')">INTERACTIONS RESEARCH</a>
+<br>(Unrelated)</div>
 <div id="research" style="display:none">
 <h2>Buttons</h2>
 <section class="flex-container">
@@ -261,6 +365,8 @@ List header
 </section>
 </div>
 </div>
+</main>
+
 <script>
 function showdiv(id){
   var change = document.getElementById(id);
