--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ List header
     <td><input checked type="radio" id="c4" name="radio-ex"/>
     <label for="c4"><span></span>Label</label></td>
   </tr>
+
   <tr style="height:40px">
     <td><h2 class="card-label">Error</h2></td>
     <td><h2 class="card-label"></h2></td>
@@ -290,6 +291,23 @@ List header
     <label for="c7"><span></span>Label</label></td>
     <td><input checked class="radio-error" type="radio" id="c8" name="radio-ex2"/>
     <label for="c8"><span></span>Label</label></td>
+  </tr>
+
+  <tr style="height:40px">
+    <td><h2 class="card-label">Disabled</h2></td>
+    <td><h2 class="card-label"></h2></td>
+    <td><h2 class="card-label"></h2></td>
+    <td></td>
+  </tr>
+  <tr style="height:40px">
+    <td><input disabled="disabled" class="checkbox-disabled" type="checkbox" id="c9" />
+    <label for="c9" style="color:#D5D3D4"><span></span>Label</label></td>
+    <td><input checked disabled="disabled" class="checkbox-disabled" type="checkbox" id="c10" />
+    <label for="c10" style="color:#D5D3D4"><span></span>Label</label></td>
+    <td><input disabled="disabled" class="radio-disabled" type="radio" id="c11" name="radio-ex3"/>
+    <label for="c11" style="color:#D5D3D4"><span></span>Label</label></td>
+    <td><input checked disabled="disabled" class="radio-disabled" type="radio" id="c12" name="radio-ex3"/>
+    <label for="c12" style="color:#D5D3D4"><span></span>Label</label></td>
   </tr>
 </table>
 </div>
