redo spacing, adding link to login doc

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 <h1>Symmetric</h1>
 
 <p>Initial exploration of Symmetric design patterns in the browser. Incorporating Outbrain's style guide into a live pattern library, in iteratable HTML.</p>
+
+<div style="text-align:center;"><a id="underline" class="hvr-underline-from-left" href="login.html">EXAMPLE PAGE</a></div>
+
 <hr>
 <!-- COLORS -->
 <h2>Colors</h2>
 
-<table style="width:130%">
+<table>
   <tr>
     <th><h2>OUTBRAIN</h2></th>
     <th><h2>AMPLIFY</h2></th>
@@ -51,7 +54,7 @@
   </tr>
 </table>
 <hr>
-<table style="width:130%">
+<table>
   <tr>
     <th><h2>CROSS</h2></th>
     <th></th>
@@ -79,7 +82,7 @@
   </tr>
 </table>
 <hr>
-<table style="width:130%">
+<table>
   <tr>
     <th><h2>CHARTS</h2></th>
     <th></th>
