--- a/login.html
+++ b/login.html
@@ -1,1 +1,36 @@
-login.html
+<!doctype HTML>
+<head>
+<link rel="stylesheet" type="text/css" href="hover.css">
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="ihover.css">
+
+</head>
+<body>
+<header></header>
+
+
+<div class="card" style="text-align: center;">
+	<h2 style="font-weight:300;color:#000">Login</h2>
+	<hr style="margin-top:0px">
+
+	<div style="width:80%; text-align: center; margin-left: auto; margin-right: auto; text-align: left;">
+	<form class="form" style="margin-left: auto; margin-right: auto;">
+		Default Field<br>
+  		<input type="text" name="default" placeholder="Default form value"><br><br>
+		Password Field <br>
+		<input type="text" name="Password" class="password" placeholder="&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;"><br>
+	</div>
+
+		<div class="flexbox-container" style="margin-top:30px; width:80%; justify-content: space-between;">
+			<input type="checkbox" id="c1" />
+    		<label for="c1"><span></span>Remember me</label>
+    		<button style="margin-right:0px" class="size-two">Submit</button>
+		</div
+
+
+	</form>
+	</div>
+</div>
+
+</body>
+</html>
