login example page

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ List header
 </form>
 <form class="form">
   Password Field <br>
-  <input type="text" name="Password" class="password" placeholder="&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;"><br>
+  <input type="password" name="Password" class="password" placeholder="&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;"><br>
   Money Field <br>
   <input type="number" min="0.01" step="0.01" name="money" class="money"><br>
 </form>
@@ -327,16 +327,16 @@ List header
 </select>
 -->
 <div style="text-align:center">
-<a style="margin-left: auto" id="white" class="hvr-radial-out" onclick="showdiv('research')">INTERACTIONS RESEARCH</a>
+<div style="margin-left: auto" id="white" class=" normal hvr-radial-out" onclick="showdiv('research')">INTERACTIONS RESEARCH</div>
 <br>(Unrelated)</div>
 <div id="research" style="display:none">
 <h2>Buttons</h2>
 <section class="flex-container">
-<a href="#" class="hvr-bounce-to-top">Background Bounce</a>
-<a href="#" id="bg" class="hvr-buzz">Buzz on Hover</a>
+<div href="#" class="normal hvr-bounce-to-top">Background Bounce</div>
+<div href="#" id="bg" class="normal hvr-buzz">Buzz on Hover</div>
 
-<a href="#" id="white" class="hvr-radial-out">Radial Background</a>
-<a href="#" id="underline" class="hvr-underline-from-left">Underline From Left</a>
+<div href="#" id="white" class="normal hvr-radial-out">Radial Background</div>
+<div href="#" id="underline" class="normal hvr-underline-from-left">Underline From Left</div>
 <!--<a href="#" style="color:#6B1E4B" class="hvr-hollow">Hollow Background</a>-->
 
 
