--- a/login.html
+++ b/login.html
@@ -8,28 +8,32 @@
 <body>
 <header></header>
 
-
+<div class="login">
 <div class="card" style="text-align: center;">
 	<h2 style="font-weight:300;color:#000">Login</h2>
-	<hr style="margin-top:0px">
+	<hr class="card-hr">
 
 	<div style="width:80%; text-align: center; margin-left: auto; margin-right: auto; text-align: left;">
 	<form class="form" style="margin-left: auto; margin-right: auto;">
-		Default Field<br>
-  		<input type="text" name="default" placeholder="Default form value"><br><br>
-		Password Field <br>
-		<input type="text" name="Password" class="password" placeholder="&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;&sdot;"><br>
+		Username or email<br>
+  		<input type="text" name="default"><br><br>
+		Password <br>
+		<input type="password" name="Password" class="password"><br>
 	</div>
 
 		<div class="flexbox-container" style="margin-top:30px; width:80%; justify-content: space-between;">
 			<input type="checkbox" id="c1" />
     		<label for="c1"><span></span>Remember me</label>
     		<button style="margin-right:0px" class="size-two">Submit</button>
+		</div>
+		<div class="flexbox-container" style="width:80%; justify-content: space-between;">
+			<a href="#" class="small">Forgot Password?</a>
+			<div style="text-align:right;font-size:9pt; padding-right:0px">Don't have an account? <a href="#" class="small">Get started</a></div>
 		</div
-
 
 	</form>
 	</div>
+</div>
 </div>
 
 </body>
