modal header and login page

--- a/login.html
+++ b/login.html
@@ -6,7 +6,11 @@
 
 </head>
 <body>
-<header></header>
+<div class="nav">
+    <a href="index.html"><img src="images/sym-header.png"></a>
+    <a class="item" href="login.html">Login</a>
+
+</div>
 
 <div class="login">
 <div class="card" style="text-align: center;">
@@ -26,15 +30,16 @@
     		<label for="c1"><span></span>Remember me</label>
     		<button style="margin-right:0px" class="size-two">Submit</button>
 		</div>
-		<div class="flexbox-container" style="width:80%; justify-content: space-between;">
+		<div class="flexbox-container" style="width:80%; align-items: center;justify-content: space-between;">
 			<a href="#" class="small">Forgot Password?</a>
 			<div style="text-align:right;font-size:9pt; padding-right:0px">Don't have an account? <a href="#" class="small">Get started</a></div>
 		</div
-
 	</form>
 	</div>
 </div>
 </div>
 
 </body>
+
+<script href="javascripts/modal.js"></script>
 </html>
