--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 
 </head>
 <body>
-<header></header>
+
+<div class="nav">
+    <img src="images/sym-header.png" href="/">
+    <a class="item" href="login.html">Login</a>
+
+</div>
+
+
 
 <main>
 
@@ -14,7 +21,8 @@
 
 <p>Initial exploration of Symmetric design patterns in the browser. Incorporating Outbrain's style guide into a live pattern library, in iteratable HTML.</p>
 
-<div style="text-align:center;"><a id="underline" class="hvr-underline-from-left" href="login.html">EXAMPLE PAGE</a></div>
+
+<div style="text-align:center;"><button onclick="location.href='login.html'">EXAMPLE PAGE</button></div>
 
 <hr>
 <!-- COLORS -->
@@ -316,6 +324,32 @@ List header
 </div>
 <br><hr>
 
+
+<!-- MODALS -->
+<h2>Modal</h2>
+<div style="text-align:center">
+<!-- Trigger/Open The Modal -->
+<button id="modal-btn">SHOW THE MODAL</button>
+  <!-- The Modal -->
+  <div id="modal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&#10005;</span>
+      <h2 style="margin-bottom:10px"> Modal Alert with standard headline</h2>
+      <small>Standard body text, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </small>
+    
+      <div class="modal-buttons">
+        <button id="close" class="btn-two size-two">Button</button>
+        <button class="size-two">Submit</button>  
+      </div>
+
+    </div>
+  </div>
+
+</div>
+<hr>
+
 <!--
 <h2>Dropdowns</h2>
 
@@ -327,16 +361,16 @@ List header
 </select>
 -->
 <div style="text-align:center">
-<div style="margin-left: auto" id="white" class=" normal hvr-radial-out" onclick="showdiv('research')">INTERACTIONS RESEARCH</div>
+<div style="margin-left: auto" class="normal white hvr-radial-out" onclick="showdiv('research')">INTERACTIONS RESEARCH</div>
 <br>(Unrelated)</div>
 <div id="research" style="display:none">
 <h2>Buttons</h2>
 <section class="flex-container">
 <div href="#" class="normal hvr-bounce-to-top">Background Bounce</div>
-<div href="#" id="bg" class="normal hvr-buzz">Buzz on Hover</div>
+<div href="#" class="normal bg hvr-buzz">Buzz on Hover</div>
 
-<div href="#" id="white" class="normal hvr-radial-out">Radial Background</div>
-<div href="#" id="underline" class="normal hvr-underline-from-left">Underline From Left</div>
+<div href="#" class="normal white hvr-radial-out">Radial Background</div>
+<div href="#" class="normal underline hvr-underline-from-left">Underline From Left</div>
 <!--<a href="#" style="color:#6B1E4B" class="hvr-hollow">Hollow Background</a>-->
 
 
@@ -417,6 +451,35 @@ function showdiv(id){
   }
 }
 </script>
+<script>
+// Get the modal
+var modal = document.getElementById('modal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("modal-btn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on the button, open the modal 
+btn.onclick = function() {
+    modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
+
+<script href="javascripts/modal.js"></script>
 </body>
 
 </html>
