--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="nav">
-    <img src="images/sym-header.png" href="/">
+    <a href="index.html"><img src="images/sym-header.png"></a>
     <a class="item" href="login.html">Login</a>
 
 </div>
@@ -175,8 +175,7 @@ List header
   Default Field <br>
   <input type="text" name="default" placeholder="Default form value"><br>
   Invalid Field <br>
-  <input type="text" name="invalid" class="invalid"><img src="images/alert.png" style="margin-left: 10px; margin-bottom:-3px">
-  <br>
+  <div style="position:relative;"><input type="text" name="invalid" class="invalid"><img src="images/alert.png" style="position: absolute; margin-left: 10px; margin-top:8px"></div>
   <span style="font-family: Open Sans, Helvetica, Arial, sans-serif;font-size: 9pt;font-weight: 100; color: #BE3655;">Error messaging looks like this.</span><br>
 </form>
 <form class="form">
