--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
 
 </head>
 <body>
+
 <div class="nav">
     <a href="index.html"><img src="images/sym-header.png"></a>
     <a class="item" href="login.html">Login</a>
@@ -13,33 +14,89 @@
 </div>
 
 <div class="login">
-<div class="card" style="text-align: center;">
-	<h2 style="font-weight:300;color:#000">Login</h2>
-	<hr class="card-hr">
+  <div class="card" style="text-align: center;">
+  	<h2 style="font-weight:300;color:#000">Login</h2>
+  	<hr class="card-hr">
 
-	<div style="width:80%; text-align: center; margin-left: auto; margin-right: auto; text-align: left;">
-	<form class="form" style="margin-left: auto; margin-right: auto;">
-		Username or email<br>
-  		<input type="text" name="default"><br><br>
-		Password <br>
-		<input type="password" name="Password" class="password"><br>
-	</div>
+  	<div style="width:80%; text-align: center; margin-left: auto; margin-right: auto; text-align: left;">
+    	<form class="form" style="margin-left: auto; margin-right: auto;" action="">
+    		Username or email<br>
+      	<input type="text" name="default"><br><br>
+    		Password <br>
+    		<input type="password" name="Password" class="password"><br>
+    </div>
 
-		<div class="flexbox-container" style="margin-top:30px; width:80%; justify-content: space-between;">
-			<input type="checkbox" id="c1" />
-    		<label for="c1"><span></span>Remember me</label>
-    		<button style="margin-right:0px" class="size-two">Submit</button>
-		</div>
-		<div class="flexbox-container" style="width:80%; align-items: center;justify-content: space-between;">
-			<a href="#" class="small">Forgot Password?</a>
-			<div style="text-align:right;font-size:9pt; padding-right:0px">Don't have an account? <a href="#" class="small">Get started</a></div>
-		</div
-	</form>
-	</div>
+    	<div class="flexbox-container" style="margin-top:30px; width:80%; justify-content: space-between;">
+    		<input type="checkbox" id="c1" />
+        <label for="c1"><span></span>Remember me</label>
+        <button id="modal-btn" style="margin-right:0px" class="size-two">Submit</button>
+    	</div>
+
+
+    	<div class="flexbox-container" style="width:80%; align-items: center;justify-content: space-between;">
+    		<a href="#" class="small">Forgot Password?</a>
+    		<div style="text-align:right;font-size:9pt; padding-right:0px">Don't have an account? <a href="#" class="small">Get started</a></div>
+    	</div>
+
+    	</form>
+
+  	
+  </div>
+
 </div>
+
+<!-- Trigger/Open The Modal -->
+
+  <!-- The Modal -->
+<div id="modal" class="modal">
+    <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&#10005;</span>
+    <h2 style="margin-bottom:10px"> Password changed!</h2>
+    <small>An email has been sent to your address with instructions on how to change your password. </small>
+    
+    <div class="modal-buttons">
+      <button class=" btn-two size-two close">Button</button>
+      <button class=" size-two close">Submit</button>  
+    </div>
+  </div>
 </div>
+
 
 </body>
 
-<script href="javascripts/modal.js"></script>
+<script>
+// Get the modal
+var modal = document.getElementById('modal');
+modal.style.display = "block";
+console.log("style", modal.style.display);
+
+
+// Get the button that opens the modal
+var btn = document.getElementById("modal-btn");
+
+// Get the <span> element that closes the modal
+for (var i = 0; i < document.getElementsByClassName("close").length; i++) {
+  var span = document.getElementsByClassName("close")[i];
+  span.onclick = function() {
+    modal.style.display = "none";
+  }
+}
+
+
+// When the user clicks on the button, open the modal 
+btn.onclick = function() {
+    modal.style.display = "block";
+    console.log("style", modal.style.display);
+}
+
+
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
 </html>
