--- a/settings.html
+++ b/settings.html
@@ -13,37 +13,45 @@
     <a class="item" href="login.html">Login</a>
 </div>
 
-<div class="login">
+<!--<div class="login">-->
   <div class="card" style="text-align: center;">
-  	<h2 style="font-weight:300;color:#000">Login</h2>
+  	<h2 style="font-weight:300;color:#000">Change email</h2>
   	<hr class="card-hr">
 
   	<div style="width:80%; text-align: center; margin-left: auto; margin-right: auto; text-align: left;">
     	<form class="form" style="margin-left: auto; margin-right: auto;" action="">
-    		Username or email<br>
+    		Email<br>
       	<input type="text" name="default"><br><br>
     		Password <br>
     		<input type="password" name="Password" class="password"><br>
     </div>
 
-    	<div class="flexbox-container" style="margin-top:30px; width:80%; justify-content: space-between;">
-    		<input type="checkbox" id="c1" />
-        <label for="c1"><span></span>Remember me</label>
-        <button  style="margin-right:0px" class="size-two">Submit</button>
+    	<div class="flexbox-container" style="margin-top:30px; width:80%; justify-content: flex-end;">
+        <button style="margin-right:0px" class="size-two">Change</button>
     	</div>
-
-
-    	<div class="flexbox-container" style="width:80%; align-items: center;justify-content: space-between;">
-    		<a href="#" class="small">Forgot Password?</a>
-    		<div style="text-align:right;font-size:9pt; padding-right:0px">Don't have an account? <a href="#" class="small">Get started</a></div>
-    	</div>
-
     	</form>
-
-  	
   </div>
 
-</div>
+
+  <div class="card" style="text-align: center; margin-bottom:100px">
+    <h2 style="font-weight:300;color:#000">Change password</h2>
+    <hr class="card-hr">
+
+    <div style="width:80%; text-align: center; margin-left: auto; margin-right: auto; text-align: left;">
+      <form class="form" style="margin-left: auto; margin-right: auto;" action="">
+        Current password<br>
+        <input type="password" name="Password" class="password"><br>
+        <br>New password<br>
+        <input type="password" name="Password" class="password"><br>
+        <br>Confirm new password<br>
+        <input type="password" name="Password" class="password"><br>
+    </div>
+
+      <div class="flexbox-container" style="margin-top:30px; width:80%;  justify-content: flex-end;">
+        <button style="margin-right:0px" class="size-two">Change</button>
+      </div>
+      </form>
+  </div>
 
 <!-- Trigger/Open The Modal -->
 
@@ -56,8 +64,8 @@
     <small>An email has been sent to your address with instructions on how to change your password. </small>
     
     <div class="modal-buttons">
-        <button style="color:#6B1E4B; font-size: 11pt" class="btn-two size-two close">Button</button>
-        <button style="color:white; font-size: 11pt" class="size-two close">Submit</button>  
+      <button class=" btn-two size-two close">Button</button>
+      <button class=" size-two close">Submit</button>  
     </div>
   </div>
 </div>
