--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a class="item" href="login.html">Login</a>
 </div>
 
+<div class="wrapper">
 
 
 <main>
@@ -320,7 +321,7 @@ List header
   </tr>
 </table>
 </div>
-</div>
+
 <br><hr>
 
 
@@ -345,8 +346,8 @@ List header
 
     </div>
   </div>
-
 </div>
+
 <hr>
 
 <!--
@@ -362,6 +363,8 @@ List header
 <div style="text-align:center">
 <div style="margin-left: auto" class="normal white hvr-radial-out" onclick="showdiv('research')">INTERACTIONS RESEARCH</div>
 <br>(Unrelated)</div>
+
+
 <div id="research" style="display:none">
 <h2>Buttons</h2>
 <section class="flex-container">
@@ -437,7 +440,7 @@ List header
         </div></a></div>
 
 </section>
-
+</div>
 </main>
 
 <script>
