--- a/settings.html
+++ b/settings.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="ihover.css">
 
 </head>
+
 <body>
 
 <div class="nav">
@@ -13,6 +14,7 @@
     <a class="item" href="login.html">Login</a>
 </div>
 
+<div class="wrapper">
 <!--<div class="login">-->
   <div class="card" style="text-align: center;">
   	<h2 style="font-weight:300;color:#000">Change email</h2>
@@ -26,9 +28,9 @@
     		<input type="password" name="Password" class="password"><br>
     </div>
 
-    	<div class="flexbox-container" style="margin-top:30px; width:80%; justify-content: flex-end;">
+    <div class="flexbox-container" style="margin-top:30px; width:80%; justify-content: flex-end;">
         <button style="margin-right:0px" class="size-two">Change</button>
-    	</div>
+    </div>
     	</form>
   </div>
 
@@ -69,7 +71,24 @@
     </div>
   </div>
 </div>
+</div>
 
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="http://www.outbrain.com"><img src="https://u.outbrain.com/amplify/static/dist/site/images/outbrain-logo-footer.png"/></a>
+        <div>© 2016 Outbrain Inc. All rights reserved.</div>
+      </div>
+      <div class="_am_core-links">
+        <a id="amplify-link" href="http://www.outbrain.com/amplify">Amplify</a>
+        <a id="terms-link" href="http://www.outbrain.com/legal/amplify-terms">Amplify Terms</a>
+        <a id="policy-link" href="http://www.outbrain.com/legal/privacy">Privacy Policy</a>
+        <a id="contact-us-link" href="http://www.outbrain.com/contact">Contact Us</a>
+        <a id="help-link" href="http://help.outbrain.com/?b_id=1524">Help/FAQs</a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
