--- a/login.html
+++ b/login.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 
+
 <div class="nav">
     <a href="index.html"><img src="images/sym-header.png"></a>
     <a class="item" href="settings.html">Settings</a>
     <a class="item" href="login.html">Login</a>
 </div>
+<div class="wrapper">
 
 <div class="login">
   <div class="card" style="text-align: center;">
@@ -61,8 +63,23 @@
     </div>
   </div>
 </div>
+</div>
 
-
+  <footer style="position:absolute">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="http://www.outbrain.com"><img src="https://u.outbrain.com/amplify/static/dist/site/images/outbrain-logo-footer.png"/></a>
+        <div>© 2016 Outbrain Inc. All rights reserved.</div>
+      </div>
+      <div class="_am_core-links">
+        <a id="amplify-link" href="http://www.outbrain.com/amplify">Amplify</a>
+        <a id="terms-link" href="http://www.outbrain.com/legal/amplify-terms">Amplify Terms</a>
+        <a id="policy-link" href="http://www.outbrain.com/legal/privacy">Privacy Policy</a>
+        <a id="contact-us-link" href="http://www.outbrain.com/contact">Contact Us</a>
+        <a id="help-link" href="http://help.outbrain.com/?b_id=1524">Help/FAQs</a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 <script>
