--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="hover.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" type="text/css" href="ihover.css">
+<script type="text/javascript" src="javascripts/jquery-min.js"></script>
 
 </head>
 <body>
@@ -28,7 +29,6 @@
 <hr>
 <!-- COLORS -->
 <h2>Colors</h2>
-
 <table>
   <tr>
     <th><h2>OUTBRAIN</h2></th>
@@ -36,28 +36,28 @@
     <th><h2>ENGAGE</h2></th>
   </tr>
   <tr>
-    <th><div class="circle"></div>Outbrain Brand #F08421</th>
-    <th><div class="circle" style="background-color:#6b1e4b"></div>Amplify, Standard Btn. #6B1E4B</th>
-    <th><div class="circle" style="background-color:#5060A3"></div>Engage Brand #5060A3</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#F08421"></div>Outbrain Brand #F08421</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#6b1e4b"></div>Amplify, Standard Btn #6B1E4B </th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#5060A3"></div>Engage Brand #5060A3</th>
   </tr>
   <tr>
     <th></th>
-    <th><div class="circle" style="background-color:#86447D"></div>Btn Hover #86447D</th>
-    <th><div class="circle" style="background-color:#63A1AB"></div>Primary (Buttons) #63A1AB</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#86447D"></div>Btn Hover #86447D</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#63A1AB"></div>Primary (Buttons) #63A1AB</th>
   </tr>
     <tr>
     <th></th>
-    <th><div class="circle" style="background-color:#535C7F"></div>Table Header BG, Selected #535C7F</th>
-    <th><div class="circle" style="background-color:#364E5F"></div>Level 2 #364E5F</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#535C7F"></div>Table Header BG, Selected #535C7F</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#364E5F"></div>Level 2 #364E5F</th>
   </tr>
   <tr>
     <th></th>
-    <th><div class="circle" style="background-color:#69739E"></div>Small Hovers #69739E</th>
-    <th><div class="circle" style="background-color:#65B2D5"></div>Level 3 #65B2D5</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#69739E"></div>Small Hovers #69739E</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#65B2D5"></div>Level 3 #65B2D5</th>
   </tr>
   <tr>
     <th></th>
-    <th><div class="circle" style="background-color:#EBECF2"></div>Totals Row #EBECF2</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#EBECF2"></div>Totals Row #EBECF2</th>
     <th></th>
   </tr>
 </table>
@@ -69,23 +69,23 @@
     <th><h2>DEVICE COLORS</h2></th>
   </tr>
   <tr>
-    <th><div class="circle" style="background-color:#30708F"></div>Table Header #30708F</th>
-    <th><div class="circle" style="background-color:#565154"></div>Reg Font Color #565154</th>
-    <th><div class="circle" style="background-color:#C1ABD1"></div>Desktop #C1ABD1</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#30708F"></div>Table Header #30708F</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#565154"></div>Reg Font Color #565154</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#C1ABD1"></div>Desktop #C1ABD1</th>
   </tr>
   <tr>
-    <th><div class="circle" style="background-color:#598DA5"></div>Table Link Color #598DA5</th>
-    <th><div class="circle" style="background-color:#93908C"></div>Subhead Font Color #93908C</th>
-    <th><div class="circle" style="background-color:#6B1E4B"></div>Tablet #6B1E4B</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#598DA5"></div>Table Link Color #598DA5</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#93908C"></div>Subhead Font Color #93908C</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#6B1E4B"></div>Tablet #6B1E4B</th>
   </tr>
   <tr>
-    <th><div class="circle" style="background-color:#A4C4D3"></div>Table/Chart Level 2 #A4C4D3</th>
-    <th><div class="circle" style="background-color:#C4BFB9"></div>Tertiary Font #C4BFB9</th>
-    <th><div class="circle" style="background-color:#598DA5"></div>Mobile #598DA5</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#A4C4D3"></div>Table/Chart Level 2 #A4C4D3</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#C4BFB9"></div>Tertiary Font #C4BFB9</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#598DA5"></div>Mobile #598DA5</th>
   </tr>
   <tr>
-    <th><div class="circle" style="background-color:#D2F1FF"></div>Highlight Selection #D2F1FF</th>
-    <th><div class="circle" style="background-color:#E2DFDE"></div>Dropdown Hover Selection #E2DFDE</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#D2F1FF"></div>Highlight Selection #D2F1FF</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#E2DFDE"></div>Dropdown Hover Selection #E2DFDE</th>
     <th></th>
   </tr>
 </table>
@@ -97,28 +97,28 @@
     <th></th>
   </tr>
   <tr>
-    <th><div class="circle" style="background-color:#E68853"></div>% CTR #E68853</th>
-    <th><div class="circle" style="background-color:#6BC6C4"></div>$ CPM #6BC6C4</th>
-    <th><div class="circle" style="background-color:#817BA1"></div># Uniques #817BA1</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#E68853"></div>% CTR #E68853</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#6BC6C4"></div>$ CPM #6BC6C4</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#817BA1"></div># Uniques #817BA1</th>
   </tr>
   <tr>
-    <th><div class="circle" style="background-color:#DDBD62"></div># Impressions #DDBD62</th>
-    <th><div class="circle" style="background-color:#8DDAC9"></div>$ Spend #8DDAC9</th>
-    <th><div class="circle" style="background-color:#BE3655"></div>Drop #BE3655</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#DDBD62"></div># Impressions #DDBD62</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#8DDAC9"></div>$ Spend #8DDAC9</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#BE3655"></div>Drop #BE3655</th>
   </tr>
   <tr>
-    <th><div class="circle" style="background-color:#BBC656"></div># Clicks #BBC656</th>
-    <th><div class="circle" style="background-color:#439093"></div>% Conversion Rate #439093</th>
-    <th><div class="circle" style="background-color:#C4BFB9"></div>Neutral #C4BFB9</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#BBC656"></div># Clicks #BBC656</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#439093"></div>% Conversion Rate #439093</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#C4BFB9"></div>Neutral #C4BFB9</th>
   </tr>
   <tr>
-    <th><div class="circle" style="background-color:#80B573"></div>$ Average CPC #80B573</th>
-    <th><div class="circle" style="background-color:#6BB8D9"></div># Actions #6BB8D9</th>
-    <th><div class="circle" style="background-color:#819E43"></div>Lift #819E43</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#80B573"></div>$ Average CPC #80B573</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#6BB8D9"></div># Actions #6BB8D9</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#819E43"></div>Lift #819E43</th>
   </tr>
   <tr>
-    <th><div class="circle" style="background-color:#488B70"></div># PVs #488B70</th>
-    <th><div class="circle" style="background-color:#A3A9DC"></div>$ CPA #A3A9DC</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#488B70"></div># PVs #488B70</th>
+    <th><div data-toggle="tooltip" title="color" onclick="copyToClipboard(this)" class="circle" style="background-color:#A3A9DC"></div>$ CPA #A3A9DC</th>
     <th></th>
   </tr>
 </table><br>
@@ -151,7 +151,7 @@
 <!-- TYPOGRAPHY -->
 <h2>Typography</h2>
 
-<h1>H1 Primary Headline, 23pt Regular, Dark Gray #726C6F, Lorem Ipsum Dolor</h1>
+<h1 data-toggle="tooltip" title="text style" onclick="copyToClipboard(this)">H1 Primary Headline, 23pt Regular, Dark Gray #726C6F, Lorem Ipsum Dolor</h1>
 
 <h2>H2 Secondary Headline, 18pt Regular, Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing</h2>
 
@@ -485,6 +485,64 @@ window.onclick = function(event) {
     }
 }
 </script>
+
+<script>
+function copyToClipboard(inputEle) {
+
+  // Create a "hidden" input
+  var aux = document.createElement("input");
+
+  var element = inputEle;
+  var title = element.getAttribute('data-original-title');
+
+
+
+  // If color
+  if (title === 'color'){
+    // Match rgb numbers
+    var rgb = element.style.backgroundColor;
+    var hexArray = rgb.match(/\d+/g);
+    var hex = '#'
+    
+    // Convert to hex
+    for (var i = 0; i < hexArray.length; i++) {
+      var hexVal = Number(hexArray[i]).toString(16);
+      hex = hex + hexVal;
+    }
+
+    // Copy hex value
+    aux.setAttribute("value", hex);
+
+  }
+  /*
+  else if (title === 'text style'){
+      console.log(element);
+      console.log(element.style);
+      aux.setAttribute("value", element.style.fontSize);
+  }
+  */
+  // Append it to the body
+  document.body.appendChild(aux);
+
+  // Highlight its content
+  aux.select();
+
+  // Copy the highlighted text
+  document.execCommand("copy");
+
+  // Remove it from the body
+  document.body.removeChild(aux);
+
+}
+</script>
+
+
+<script src="javascripts/tooltip.js"></script>
+<script> $(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
+</script>
+
 
 <script href="javascripts/modal.js"></script>
 </body>
