--- a/index.html
+++ b/index.html
@@ -514,13 +514,11 @@ function copyToClipboard(inputEle) {
     aux.setAttribute("value", hex);
 
   }
-  /*
+  
   else if (title === 'text style'){
-      console.log(element);
-      console.log(element.style);
-      aux.setAttribute("value", element.style.fontSize);
+      aux.setAttribute("value", "23pt");
   }
-  */
+  
   // Append it to the body
   document.body.appendChild(aux);
 
