--- a/spinner.html
+++ b/spinner.html
@@ -1,17 +1,15 @@
 <!doctype HTML>
 <head>
-<link rel="stylesheet" type="text/css" href="hover.css">
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="ihover.css">
-<link rel="stylesheet" type="text/css" href="spin.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/hover.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/style.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/ihover.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/spin.css">
 </head>
 <body>
 
 
 <div class="nav">
-    <a href="index.html"><img src="images/sym-header.png"></a>
-    <a class="item" href="settings.html">Settings</a>
-    <a class="item" href="login.html">Login</a>
+    <a href="index.html"><img src="public/images/sym-header.png"></a>
 </div>
 <div class="wrapper">
 
