bringing up to date with the internal style guide

--- a/amelia-spinner.html
+++ b/amelia-spinner.html
@@ -1,13 +1,14 @@
 <!doctype HTML>
 <head>
-<title>Spinner</title>
+<title>Amelia Spinner</title>
 <link rel="stylesheet" type="text/css" href="public/stylesheets/hover.css">
 <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css">
 <link rel="stylesheet" type="text/css" href="public/stylesheets/spin.css">
-
-<script type="text/javascript" src="public/javascripts/jquery-min.js"></script>
-<script type="text/javascript" src="public/javascripts/slick.min.js"></script>
 <script type="text/javascript" src="public/javascripts/set-active-tab.js"></script>
+
+<style>
+  html{background-color:white;}
+</style>
 
 </head>
 
@@ -32,28 +33,17 @@
   
 <div class="wrapper">
 
-
-<div class="login">
-
-  <div id="loader-item" class="load-container loaderex"></div>
+<div style="display:flex; align-items:center; justify-content:center;margin-top:40vh">
+  <div class="amelia">
+  <img src="public/images/amelialoader_128.gif">
+  <div style="text-align:center; padding-top:30px">
+	<a href="index.html">Back to Home</a>
+  </div>
 
 </div>
 
-  <footer style="position:absolute">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <a href="http://www.outbrain.com"><img src="https://u.outbrain.com/amplify/static/dist/site/images/outbrain-logo-footer.png"/></a>
-        <div>© 2016 Outbrain Inc. All rights reserved.</div>
-      </div>
-      <div class="_am_core-links">
-        <a id="amplify-link" href="http://www.outbrain.com/amplify">Amplify</a>
-        <a id="terms-link" href="http://www.outbrain.com/legal/amplify-terms">Amplify Terms</a>
-        <a id="policy-link" href="http://www.outbrain.com/legal/privacy">Privacy Policy</a>
-        <a id="contact-us-link" href="http://www.outbrain.com/contact">Contact Us</a>
-        <a id="help-link" href="http://help.outbrain.com/?b_id=1524">Help/FAQs</a>
-      </div>
-    </div>
-  </footer>
-</body>
+</div>
 
+</div>
+</body>
 </html>
