--- a/examples.html
+++ b/examples.html
@@ -1,13 +1,40 @@
 <!doctype HTML>
 <head>
-<title>Spinner</title>
+<title>Example Pages</title>
 <link rel="stylesheet" type="text/css" href="public/stylesheets/hover.css">
 <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css">
-<link rel="stylesheet" type="text/css" href="public/stylesheets/spin.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/ihover.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/slick.css"/>
+<link rel="stylesheet" type="text/css" href="public/stylesheets/slick-theme.css"/>
 
 <script type="text/javascript" src="public/javascripts/jquery-min.js"></script>
 <script type="text/javascript" src="public/javascripts/slick.min.js"></script>
 <script type="text/javascript" src="public/javascripts/set-active-tab.js"></script>
+
+<style>
+.flexbox-container {
+		flex-wrap: nowrap;
+}
+.example {
+	display: flex;
+	color: #726C6F;
+  	justify-content: center;
+  	flex-direction: column;
+  	text-align: center;	
+	border: 1px solid #958D91;
+	border-radius: 2px;
+	margin: 10px;
+	height: 150px;
+	text-align: center;
+	text-decoration: none;
+	align-self: center;
+	background-color: #fff;
+
+}
+.example:hover {
+background-color: #EEE;
+}
+</style>
 
 </head>
 
@@ -29,31 +56,16 @@
 </div>
 
 <body>
-  
+
 <div class="wrapper">
 
-
-<div class="login">
-
-  <div id="loader-item" class="load-container loaderex"></div>
-
+<h1> Example Pages</h1>
+<div class="flexbox-container">
+		<a href="login.html" class="example">Login Page</a>
+		<a href="settings.html" class="example">Settings</a>
+		<a href="spinner.html" class="example">Spinner</a>
+		<a href="amelia-spinner.html" class="example">Amelia Spinner</a>
 </div>
-
-  <footer style="position:absolute">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <a href="http://www.outbrain.com"><img src="https://u.outbrain.com/amplify/static/dist/site/images/outbrain-logo-footer.png"/></a>
-        <div>© 2016 Outbrain Inc. All rights reserved.</div>
-      </div>
-      <div class="_am_core-links">
-        <a id="amplify-link" href="http://www.outbrain.com/amplify">Amplify</a>
-        <a id="terms-link" href="http://www.outbrain.com/legal/amplify-terms">Amplify Terms</a>
-        <a id="policy-link" href="http://www.outbrain.com/legal/privacy">Privacy Policy</a>
-        <a id="contact-us-link" href="http://www.outbrain.com/contact">Contact Us</a>
-        <a id="help-link" href="http://help.outbrain.com/?b_id=1524">Help/FAQs</a>
-      </div>
-    </div>
-  </footer>
+</div>
 </body>
-
 </html>
