--- a/modals.html
+++ b/modals.html
@@ -1,5 +1,6 @@
 <!doctype HTML>
 <head>
+<title>Modals</title>
 <link rel="stylesheet" type="text/css" href="public/stylesheets/hover.css">
 <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css">
 <link rel="stylesheet" type="text/css" href="public/stylesheets/ihover.css">
@@ -30,81 +31,51 @@
 </div>
 
 <body>
-  
+
 <div class="wrapper">
 
-<div class="login">
-  <div class="card" style="text-align: center;">
-  	<h2 style="font-weight:300;color:#000">Login</h2>
-  	<hr class="card-hr">
-
-  	<div style="width:80%; text-align: center; margin-left: auto; margin-right: auto; text-align: left;">
-    	<form class="form" style="margin-left: auto; margin-right: auto;" action="">
-    		Username or email<br>
-      	<input type="text" name="default"><br><br>
-    		Password <br>
-    		<input type="password" name="Password" class="password"><br>
-    </div>
-
-    	<div class="flexbox-container" style="margin-top:30px; width:80%; justify-content: space-between;">
-    		<input type="checkbox" id="c1" />
-        <label for="c1"><span></span>Remember me</label>
-        <button  style="margin-right:0px" class="size-two">Submit</button>
-    	</div>
-
-
-    	<div class="flexbox-container" style="width:80%; align-items: center;justify-content: space-between;">
-    		<a href="#" class="small">Forgot Password?</a>
-    		<div style="text-align:right;font-size:9pt; padding-right:0px">Don't have an account? <a href="#" class="small">Get started</a></div>
-    	</div>
-
-    	</form>
-
-  	
-  </div>
-
-</div>
-
+<!-- MODALS -->
+<h2>Modal</h2>
+<div style="text-align:center">
 <!-- Trigger/Open The Modal -->
-
+<button id="modal-btn">SHOW THE MODAL</button>
   <!-- The Modal -->
-<div id="modal" class="modal">
+  <div id="modal" class="modal">
+
     <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&#10005;</span>
-    <h2 style="margin-bottom:10px"> Password changed!</h2>
-    <small>An email has been sent to your address with instructions on how to change your password. </small>
+    <div class="modal-content">
+      <span class="close">&#10005;</span>
+      <h2 style="margin-bottom:10px"> Modal Alert with standard headline</h2>
+      <small>Standard body text, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </small>
     
-    <div class="modal-buttons">
+      <div class="modal-buttons">
         <button style="color:#6B1E4B; font-size: 11pt" class="btn-two size-two close">Button</button>
         <button style="color:white; font-size: 11pt" class="size-two close">Submit</button>  
+      </div>
+
     </div>
   </div>
 </div>
-</div>
 
-  <footer style="position:absolute">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <a href="http://www.outbrain.com"><img src="https://u.outbrain.com/amplify/static/dist/site/images/outbrain-logo-footer.png"/></a>
-        <div>© 2016 Outbrain Inc. All rights reserved.</div>
-      </div>
-      <div class="_am_core-links">
-        <a id="amplify-link" href="http://www.outbrain.com/amplify">Amplify</a>
-        <a id="terms-link" href="http://www.outbrain.com/legal/amplify-terms">Amplify Terms</a>
-        <a id="policy-link" href="http://www.outbrain.com/legal/privacy">Privacy Policy</a>
-        <a id="contact-us-link" href="http://www.outbrain.com/contact">Contact Us</a>
-        <a id="help-link" href="http://help.outbrain.com/?b_id=1524">Help/FAQs</a>
-      </div>
-    </div>
-  </footer>
+</div>
 </body>
 
+
+<script href="javascripts/modal.js"></script>
+
+<script>
+function showdiv(id){
+  var change = document.getElementById(id);
+  if (change.style.display === 'none'){
+    change.style.display = 'block';
+  } else {
+    change.style.display = 'none';
+  }
+}
+</script>
 <script>
 // Get the modal
 var modal = document.getElementById('modal');
-modal.style.display = "none";
-console.log("style", modal.style.display);
 
 
 // Get the button that opens the modal
