--- a/settings.html
+++ b/settings.html
@@ -1,19 +1,36 @@
 <!doctype HTML>
 <head>
-<link rel="stylesheet" type="text/css" href="hover.css">
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="ihover.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/hover.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/style.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/ihover.css">
+<link rel="stylesheet" type="text/css" href="public/stylesheets/slick.css"/>
+<link rel="stylesheet" type="text/css" href="public/stylesheets/slick-theme.css"/>
+
+<script type="text/javascript" src="public/javascripts/jquery-min.js"></script>
+<script type="text/javascript" src="public/javascripts/slick.min.js"></script>
+<script type="text/javascript" src="public/javascripts/set-active-tab.js"></script>
 
 </head>
 
-<body>
-
 <div class="nav">
-    <a href="index.html"><img src="images/sym-header.png"></a>
-    <a class="item" href="settings.html">Settings</a>
-    <a class="item" href="login.html">Login</a>
+    <a href="index.html"><img src="public/images/sym-header.png"></a>
+    <a class="item" href="examples.html">Examples</a>
+  </div>
+<div class="side-nav">
+  <ul>
+    <a href="index.html" id="home"><li class="item">Mission Statement</li></a>
+    <a href="type.html" id="type"><li class="item">Typography</li></a>
+    <a href="colors.html" id="colors"><li class="item">Colors</li></a>
+    <a href="buttons.html" id="buttons"><li class="item">Buttons</li></a>
+    <a href="textfields.html" id="textfields"><li class="item">Text Fields</li></a>
+    <a href="checkboxes.html" id="checkboxes"><li class="item">Checkboxes</li></a>
+    <a href="modals.html" id="modals"><li class="item">Modals and Popovers</li></a>
+    <a href="animations.html" id="animations"><li class="item">Animations</li></a>
+  </ul>
 </div>
 
+<body>
+  
 <div class="wrapper">
 <!--<div class="login">-->
   <div class="card" style="text-align: center;">
