hack the script

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <div class="side-nav">
   <ul>
     <a href="index.html" id="home"><li class="item">Mission Statement</li></a>
-    <a href="type.html" id="interactions/type"><li class="item">Typography</li></a>
-    <a href="colors.html" id="interactions/colors"><li class="item">Colors</li></a>
-    <a href="buttons.html" id="interactions/buttons"><li class="item">Buttons</li></a>
-    <a href="textfields.html" id="interactions/textfields"><li class="item">Text Fields</li></a>
-    <a href="checkboxes.html" id="interactions/checkboxes"><li class="item">Checkboxes</li></a>
-    <a href="modals.html" id="interactions/modals"><li class="item">Modals and Popovers</li></a>
-    <a href="animations.html" id="interactions/animations"><li class="item">Animations</li></a>
+    <a href="type.html" id="interactions/type.html"><li class="item">Typography</li></a>
+    <a href="colors.html" id="interactions/colors.html"><li class="item">Colors</li></a>
+    <a href="buttons.html" id="interactions/buttons.html"><li class="item">Buttons</li></a>
+    <a href="textfields.html" id="interactions/textfields.html"><li class="item">Text Fields</li></a>
+    <a href="checkboxes.html" id="interactions/checkboxes.html"><li class="item">Checkboxes</li></a>
+    <a href="modals.html" id="interactions/modals.html"><li class="item">Modals and Popovers</li></a>
+    <a href="animations.html" id="interactions/animations.html"><li class="item">Animations</li></a>
   </ul>
 </div>
 
